pipeline de busca semantica utilizando faiss para recuperacao de documentos apos vetorizacao

--- a/notebooks/rag_example.ipynb
+++ b/notebooks/rag_example.ipynb
@@ -1006,35 +1006,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "FAISS.__init__() missing 1 required positional argument: 'embedding_function'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[29], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m vectorstore \u001b[38;5;241m=\u001b[39m \u001b[43mFAISS\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[43mindex\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdocstore\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdocstore\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mindex_to_docstore_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mindex_to_docstore_id\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: FAISS.__init__() missing 1 required positional argument: 'embedding_function'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vectorstore = FAISS(\n",
     "    index=index,\n",
     "    docstore=docstore,\n",
-    "    index_to_docstore_id=index_to_docstore_id\n",
+    "    index_to_docstore_id=index_to_docstore_id,\n",
+    "    embedding_function=langchain_embeddings\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "query = \"Documentos sobre ansiedade\"\n",
+    "query_embedding = vectorizer.embed_text(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_embedding = np.squeeze(query_embedding)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "similar_docs = store.search_similar(query_embedding, top_k=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Documentos mais relevantes para a consulta 'Documentos sobre ansiedade':\n",
+      "Documento 1:  O MEDO, A ANSIEDADE E AS SUAS PERTURBAÇÕES \n",
+      "Américo Baptista 1 \n",
+      "Marina Carvalho 2 \n",
+      "Fátima Lory 3 \n",
+      " \n",
+      " \n",
+      "Resumo : É apresentado um modelo para compreensão do medo e da ansiedade, \n",
+      "assim como de tratamento das suas perturbações, de acordo com o modo de actua-\n",
+      "ção no Centro de Aconselhamento para Estudantes da Universidade Lusófona. O \n",
+      "medo é considerado uma adaptação, de acordo com uma  perspectiva evolutiva e \n",
+      "desenvolvimentista. Como qualquer adaptação varia, podendo apresentar desajus-\n",
+      "tamentos  \n",
+      "[...]\n",
+      "Documento 3: SII 20Rev Bras Psiquiatr 2000;22(Supl II):20-3\n",
+      "Introdução\n",
+      "Ansiedade é um sentimento vago e desagrad ável de medo,\n",
+      "apreensão, caracterizado por tens ão ou desconforto derivado\n",
+      "de antecipa ção de perigo, de algo desconhecido ou estranho.1,2\n",
+      "Em crianças, o desenvolvimento emocional influi sobre as\n",
+      "causas e a maneira como se manifestam os medos e as preocu-pações tanto normais quanto patol ógicos.\n",
+      "2,3 Diferentemente dos\n",
+      "adultos, crian ças podem n ão reconhecer seus medos como exa-\n",
+      "gerados ou irracio \n",
+      "[...]\n",
+      "Documento 2: Transtornos de ansiedade e exercício físico\n",
+      "Anxiety disorders and physical exercise\n",
+      "Resumo\n",
+      "Objetivo:  A maioria dos estudos sobre os efeitos ansiolíticos do exercício físico, até meados da década de 90, foram realizados\n",
+      "avaliando-se estados de ansiedade, com indivíduos jovens, universitários ou atletas, que podem ser considerados pré-condiciona-dos, limitando a validade das conclusões para populações com ansiedade patológica. Na atualidade, o número de estudosenvolvendo pacientes com transtorno  \n",
+      "[...]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"\\nDocumentos mais relevantes para a consulta '{query}':\")\n",
+    "for idx in similar_docs[0]:\n",
+    "    print(f\"Documento {idx + 1}: {documents[idx][:500]} \\n[...]\")"
+   ]
   }
  ],
  "metadata": {
